modified:   api/server/controller/biology_controller.go 	modified:   api/server/controller/device_controller.go 	modified:   api/server/router/biology_router.go 	modified:   api/server/router/device_router.go 	modified:   api/server/service/biology_service.go 	modified:   api/server/service/device_service.go 	modified:   api/server/vo/biology_info.go 	modified:   api/server/vo/fixed_device.go 	modified:   build/go-backend 	modified:   docs/docs.go 	modified:   docs/swagger.json 	modified:   docs/swagger.yaml 	modified:   scripts/build.bat
